# NonMouse

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
nonmouse/: __init__.py  __main__.py  args.py  utils.py
tests/: test_utils.py
